--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <option value="Other">Other</option>
         </select>
         <input type="text" id="productName" placeholder="Product Name">
-        <input type="text" id="productId" placeholder="IMEI (15-digit only)" maxlength="15">
+        <input type="text" id="productId" placeholder="IMEI (optional)">
         <input type="number" id="qty" placeholder="Qty">
         <input type="number" id="price" placeholder="Price">
         <button onclick="addProduct()">Add</button>
